# Project-deployment-and-landing

./: README.md
onnx-typecast/: convert.py
yolov5-6.0-flask-web/: README.md  flask_app.py  index.html  prepare_data.py  run.cmd  yolov5_train.txt  yolov5_val.txt
yolov5-6.0-flask-web/backend/: flask_id2name.py  predict.py
yolov5-6.0-flask-web/frontend/css/: style.css
口罩识别/: README.md  package_log.txt  sdk_log.txt  项目说明.docx
口罩识别/config/: algo_config.json
口罩识别/src/: Configuration.hpp  SampleAlgorithm.cpp  SampleDetector.cpp
打榜/: README.md  ji.py  sam.py  split_train_val.py
打榜/Efficient-Computing/: README.md
打榜/cvmart_linknet/: README.md
打榜/ev_detection/: readme.md  requirements.txt  splitData.py  train_det.py  train_yolov5.sh  train_yolov7.sh  train_yolox.sh
打榜/ev_sdk-semantic-segment/: CMakeLists.txt  Dockerfile  README.md
打榜/ev_sdk-semantic-segment/3rd/onnxruntime-linux-x64-1.6.0/: GIT_COMMIT_ID
打榜/ev_sdk-semantic-segment/config/: algo_config.json
打榜/ev_sdk-semantic-segment/doc/: EV_SDK配置协议说明.md  人脸识别接口文档.md
打榜/ev_sdk-semantic-segment/include/: ji_utils.h
打榜/ev_sdk-semantic-segment/src/: SampleDetector.cpp  SampleDetector.hpp  ji.cpp
打榜/ev_sdk-semantic-segment/test/: test.cpp
打榜/ev_sdk_yolov8_demo/: .gitignore
打榜/gold_yolo/: convert_dataset.py  start_train.sh
打榜/ultralytics-yolov8/: convert_dataset-8.15.py  convert_dataset-8.4.py  convert_dataset-head.py  convert_dataset.py  export.py  freeze.py  ji (1).py  ji-sahi.py  ji.py  ji_detect.py  ji_double - trt.py  ji_double.py  mydata.yaml  pose.py  start.sh  start_train.sh  transform_model.sh  transform_onnx.py
打榜/yolov5-seg/: export.py
打榜/yolov5增强版/: label.txt  preprocess-points.py  preprocess.py  start_train.sh
打榜/yolov5轻量化/: start_train.sh
打榜/yolov7/: keypoint.py  pose-estimate.py  test_point.py
打榜/yolov7-pose/: export.py
打榜/yolov7-pose_Npoint_Ncla/: export.py  keypoint.py  preprocess.py  start_train.sh  test_Ncla.py  train.cache  train_Ncla_nPoint.py  valid.cache  valid.txt
检测/: calculate_anchors.py  kmeans.py  voc_label.py
裸土识别/: README.md  jiji.py  裸土识别部署.ipynb
(+6033 files in other folders)
